<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvPastelDeChoclo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="156dp"
        android:text="@string/pastelDeCchoclo"
        app:layout_constraintStart_toEndOf="@+id/imgCazuela"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvCazuela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/cazuela"
        app:layout_constraintStart_toStartOf="@+id/tvPastelDeChoclo"
        app:layout_constraintTop_toTopOf="@+id/imgPatelDeChoclo" />

    <TextView
        android:id="@+id/tvComida"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/comida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPatelDeChoclo" />

    <TextView
        android:id="@+id/tvTotalFijo"
        android:layout_width="150dp"
        android:layout_height="50dp"

        android:layout_marginTop="24dp"
        android:text="@string/total"
        app:layout_constraintStart_toStartOf="@+id/swPropina"
        app:layout_constraintTop_toBottomOf="@+id/swPropina" />

    <Switch
        android:id="@+id/swPropina"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/propinaFija"
        app:layout_constraintStart_toStartOf="@+id/tvComida"
        app:layout_constraintTop_toBottomOf="@+id/tvComida" />

    <ImageView
        android:id="@+id/imgLogoRestaurant"
        android:layout_width="332dp"
        android:layout_height="121dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_restaurant" />

    <ImageView
        android:id="@+id/imgPatelDeChoclo"
        android:layout_width="182dp"
        android:layout_height="129dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:scaleY="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCazuela"
        app:srcCompat="@drawable/pasteldecholo" />

    <ImageView
        android:id="@+id/imgCazuela"
        android:layout_width="182dp"
        android:layout_height="129dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogoRestaurant"
        app:srcCompat="@drawable/cazuela" />

    <EditText
        android:id="@+id/etPastelDeChoclo"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/cant"
        android:inputType="numberSigned"
        app:layout_constraintStart_toStartOf="@+id/tvCazuela"
        app:layout_constraintTop_toBottomOf="@+id/tvCazuela" />

    <EditText
        android:id="@+id/etCazuela"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/cant"
        android:inputType="numberSigned"
        app:layout_constraintStart_toStartOf="@+id/tvPastelDeChoclo"
        app:layout_constraintTop_toBottomOf="@+id/tvPastelDeChoclo" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/totalFinalHint"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/tvPropina"
        app:layout_constraintTop_toTopOf="@+id/tvTotalFijo" />

    <TextView
        android:id="@+id/tvPropina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/propinaHint"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/tvPreTotal"
        app:layout_constraintTop_toTopOf="@+id/swPropina" />

    <TextView
        android:id="@+id/tvPreTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/tvComida"
        app:layout_constraintTop_toTopOf="@+id/tvComida"
        tools:text="pretotal" />

    <TextView
        android:id="@+id/tvTotalCazuela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:hint="aqui"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/etCazuela"
        app:layout_constraintTop_toBottomOf="@+id/etCazuela"
        tools:text="total cazuela" />

    <TextView
        android:id="@+id/tvTotalPastelDeChoclo"
        android:layout_width="156dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/etPastelDeChoclo"
        app:layout_constraintTop_toBottomOf="@+id/etPastelDeChoclo"
        tools:text="total pasteles de choclo" />


</androidx.constraintlayout.widget.ConstraintLayout>